# src/api/to_de_taxi/swagger.json
@@ -495,6 +495,51 @@
         ]
       }
     },
+    "/api/v1/Corrida/consulta_id_solicitacao_corrida/{id}": {
+      "get": {
+        "tags": [
+          "Corrida"
+        ],
+        "summary": "Gets all corridas by passageiro.",
+        "operationId": "ApiV1CorridaConsulta_id_solicitacao_corridaByIdGet",
+        "consumes": [],
+        "produces": [
+          "text/plain",
+          "application/json",
+          "text/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "format": "uuid"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "schema": {
+              "$ref": "#/definitions/Response[CorridaSummary]"
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          }
+        },
+        "security": [
+          {
+            "oauth2": [
+              "demo_api"
+            ]
+          }
+        ]
+      }
+    },
     "/api/v1/Corrida/{id}": {
       "get": {
         "tags": [
